<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Xiaomi</string>
    <string name="advanced_settings">Advanced</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="taptowake_summary">Double tap to wake device</string>
    <string name="taptowake_title">Tap to wake</string>
    <string name="category_screen_color">Screen Color</string>
    <string name="rgb_red">Red</string>
    <string name="rgb_blue">Blue</string>
    <string name="rgb_green">Green</string>
    <string name="category_kcal_extras">Fine Tuning</string>
    <string name="rgb_min">Minimum RGB Value</string>
    <string name="sat_intensity">Saturation Intensity</string>
    <string name="scr_hue">Screen Hue</string>
    <string name="scr_val">Screen Value</string>
    <string name="scr_cont">Screen Contrast</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>
    <string name="restore_default">Default</string>

    <string name="display_title">Display</string>
</resources>

