<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_vibrator">
        <org.omnirom.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head" />
    </PreferenceCategory>
   
    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">
        <SwitchPreference
            android:key="taptowake"
            android:summary="@string/taptowake_summary"
            android:title="@string/taptowake_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_screen_color">
        <org.omnirom.device.KcalRGBRedPreference
            android:key="rgb_red"
            android:title="@string/rgb_red" />
        <org.omnirom.device.KcalRGBGreenPreference
            android:key="rgb_green"
            android:title="@string/rgb_green" />
        <org.omnirom.device.KcalRGBBluePreference
            android:key="rgb_blue"
            android:title="@string/rgb_blue" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_kcal_extras">
        <org.omnirom.device.KcalRGBMinPreference
            android:key="rgb_min"
            android:title="@string/rgb_min" />
        <org.omnirom.device.KcalSatIntensityPreference
            android:key="sat_intensity"
            android:title="@string/sat_intensity" />
        <org.omnirom.device.KcalScreenHuePreference
            android:key="scr_hue"
            android:title="@string/scr_hue" />
        <org.omnirom.device.KcalScreenValuePreference
            android:key="scr_val"
            android:title="@string/scr_val" />
        <org.omnirom.device.KcalScreenContrPreference
            android:key="scr_cont"
            android:title="@string/scr_cont" />
    </PreferenceCategory>

</PreferenceScreen>
